# models/column.js
@@ -1,24 +1,24 @@
-const { Schema, model } = require("mongoose");
-const { handleMongooseError } = require("../helpers");
+const { Schema, model } = require('mongoose');
+const { handleMongooseError } = require('../helpers');
 
 const columnSchema = new Schema(
   {
     title: {
       type: String,
-      default: "New Column",
+      default: 'New Column',
     },
-    parrentBoard: {
+    parentBoard: {
       type: Schema.Types.ObjectId,
-      ref: "board",
+      ref: 'board',
     },
-    board: { type: Schema.Types.ObjectId, ref: "board" },
+    board: { type: Schema.Types.ObjectId, ref: 'board' },
     // owner: { type: Schema.Types.ObjectId, ref: "user" },
   },
   { versionKey: false }
 );
 
-columnSchema.post("save", handleMongooseError);
+columnSchema.post('save', handleMongooseError);
 
-const Column = model("column", columnSchema);
+const Column = model('column', columnSchema);
 
 module.exports = Column;
